# JobHunter

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
src/jobhunter/: crew.py  main.py
