[project]
name = "jobhunter"
version = "0.1.0"
description = "JobHunter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
jobhunter = "jobhunter.main:run"
run_crew = "jobhunter.main:run"
train = "jobhunter.main:train"
replay = "jobhunter.main:replay"
test = "jobhunter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
